removed a line and added another

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  this text is changed by mohan.hahhhaaaa....
 </p>
 
 </body>
